# genai-forex-report-daily

./: README.md
Code/: .pre-commit-config.yaml  pyproject.toml
