[project]
name = "Forex_Analysis_and_Reporting"
version = "1.0.0"
description = ""
authors = [
    {name = "Kieu Thanh Anh",email = "anh.kieuthanh99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "detect-secrets (>=1.5.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "code", from = "src"}]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["your_package"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
